Update 1.0.2 Added custom login screen instead of prompt; Added ability to change username; Added server stats to be shown in main menu;

--- a/server-config.json
+++ b/server-config.json
@@ -3,5 +3,6 @@
 	"scoreboards": true,
 	"ping_tolerance": 3,
 	"tick_tolerance": 2,
-	"max_accusations": 3
+	"max_accusations": 3,
+	"stats": true
 }
